[package]
name = "asyncio"
version = "0.7.0"
authors = ["Haruhiko Uchida <harre.orz@gmail.com>"]

[features]
default = ["context"]

[dependencies]
bitflags = "*"
lazy_static = "*"
kernel32-sys = "*"
winapi = "*"
libc = "*"
ws2_32-sys = "*"
errno = "*"
time = "*"
context = { version = "2.0", optional = true }
termios = { version = "*", optional = true }
openssl = { version = "*", optional = true }
openssl-sys = { version = "*", optional = true }
