[package]
name = "asyncio"
version = "0.6.1"
authors = ["Haruhiko Uchida <harre.orz@gmail.com>"]

[dependencies]
bitflags = "^1"
lazy_static = "^1"
libc = "^0.2"
time = "^0.1"

[target.'cfg(unix)'.dependencies]
context = { version = '^0.2', optional = true }
termios = { version = '^0.3', optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "^0.3", features = ["winerror", "winsock2", "ws2def", "ws2ipdef", "ws2tcpip"] }

